--- a/rebar.config
+++ b/rebar.config
@@ -1,26 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, [
-        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "2.8.0"}}}
-       ]}.
+{deps, []}.
 
-%% {plugins, [
-%%            {gitrel, ".*", {git, "git://github.com/mynameisdaniil/gitrel.git", {branch, "master"}}}
-%%           ]}.
-%% 
-%% {relx, [
-%%         {include_src, false},
-%%         {release,
-%%          {gitrel, "v0.0.1"}, %%bump marker
-%%          [
-%%           gitrel,
-%%           jsx
-%%          ]
-%%         },
-%%         {extended_start_script, true}
-%%       ]}.
-%% 
-%% {gitrel, [
-%%           {user, "mynameisdaniil"},
-%%           {token, "354c7f44fb2af2872e934c840b152ee1f7beceba"},
-%%           {repo, "mynameisdaniil/gitrel"}
-%%          ]}.
+{plugins, [
+           {gitrel, ".*", {git, "git://github.com/mynameisdaniil/gitrel.git", {branch, "master"}}}
+          ]}.
+
