--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,7 @@
 {deps, []}.
 
 {plugins, [
+           {bump, ".*", {git, "git://github.com/mynameisdaniil/bump.git", {branch, "master"}}},
            {gitrel, ".*", {git, "git://github.com/mynameisdaniil/gitrel.git", {branch, "master"}}}
           ]}.
 
