adding fake release section for bump

--- a/rebar.config
+++ b/rebar.config
@@ -6,3 +6,14 @@
            {gitrel, ".*", {git, "git://github.com/mynameisdaniil/gitrel.git", {branch, "master"}}}
           ]}.
 
+{relx, [
+        {include_src, false},
+        {release,
+         {gitrel, "v0.0.1"}, %%bump marker
+         [
+          gitrel
+         ]
+        },
+        {extended_start_script, true}
+      ]}.
+
